# kaithem-plugin-datasette

./: README.md  pyproject.toml
kaithem_plugin_datasette/: __init__.py
