[project]
name = "kaithem-plugin-datasette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    #"kaithem>=0.86.3",
    "kaithem",
    "datasette>=1.0a16",
    "datasette-write",
    "datasette-write-ui",
    "datasette-edit-schema",
    "datasette-column-sum",
    "datasette-plot",
    "datasette-search-all",
    "datasette-checkbox",
    "datasette-explain",
    "datasette-comments",
    "datasette-render-images",
    "datasette-pretty-json>=0.3"

]

[tool.uv.sources]
foo = { path = "../KaithemAutomation" }