[project]
name = "kaithem-plugin-datasette"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaithem>=0.87.0",
    "kaithem",
    "datasette>=1.0a16",
    "datasette-write",
    "datasette-write-ui",
    "datasette-edit-schema",
    # https://github.com/datasette/datasette-column-sum/issues/2
    # "datasette-column-sum",
    "datasette-plot",
    "datasette-search-all",
    "datasette-checkbox",
    "datasette-explain",
    "datasette-comments",
    "datasette-render-images",
    "datasette-render-markdown",
    "datasette-pretty-json>=0.3",
    "datasette-cluster-map",
    "datasette-geojson",
    "datasette-copyable",
    "datasette-mp3-audio",
    "datasette-import"
]

[tool.uv]
package = true